add the body of disp_ms_sent_grouped add to vignettes

--- a/vignettes/excel_powerpoint.Rmd
+++ b/vignettes/excel_powerpoint.Rmd
@@ -110,3 +110,11 @@ grouped_vot_plot <- grouped_vot_plot %>%
 # Sentiment Distribution
 
 We often need to create horizontal bars to display the sentiment distributions for groups.
+
+```{r}
+
+```
+
+
+## Sentiment bar charts function
+
