--- a/vignettes/powerpoint.Rmd
+++ b/vignettes/powerpoint.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup, echo = FALSE, results='hide'}
+```{r setup, echo = FALSE, results='hide', message = FALSE}
 library(DisplayR)
 library(tidyverse)
 library(officer)
@@ -34,11 +34,11 @@ Our use of this package will mainly be for industrialising the process of export
 
 Charts in initial automation:
 
-* Volume over time - line chart 
-* Grouped volume over time - line chart 
-* (Grouped) sentiment distribution - horizontal bar chart
+-   Volume over time - line chart
+-   Grouped volume over time - line chart
+-   (Grouped) sentiment distribution - stacked horizontal bar chart
 
-# Creating  Volume Over Time Plots
+# Creating Volume Over Time Plots
 
 Let's get some data.
 
@@ -110,16 +110,23 @@ grouped_vot_plot <- grouped_vot_plot %>%
   chart_labels(title = "Volume over time plot coloured in Viridis scale", xlab = "Date", ylab = "Weekly volume")
 ```
 
-
 # Visualising Sentiment Distributions
 
 We often need to visualise sentiment distributions - either for entire datasets or for groups, or groups within groups...
 
+Generally we prefer stacked bar charts to pie charts and their variants. The human visual system is better at comparing lengths and heights than it is areas. They're also neater, and more concise.
+
 ## Creating Stacked Sentiment Barcharts %
 
-Generally we prefer stacked bar charts to pie charts and their variants. The human visual system is better at comparing lengths and heights than it is areas.
+To create our stacked sentiment barcharts we can use the disp_ms_sent_grouped function. This function expects you to enter the variable which contains sentiment categories - it will remove any NAs for sentiment, and make the sentiment categories lower case.
 
-```{r}
+You also need to input a topic variable, and you can decide whether the output is 'percent' or 'volume' with the `plot_type` argument. 
+
+<div class="tip">
+**Tip**: Using 'percent' will ensure that each stacked bar is the same length, but may be misleading when volume is low. 
+</div>
+
+```{r, eval = FALSE}
 library(ggplot2)
 grouped_sent_chart <- df %>% 
   disp_ms_sent_grouped(sentiment, topic, plot_type = "percent") %>%
@@ -136,7 +143,7 @@ grouped_sent_chart %>% print(preview = TRUE)
 
 The ordering of our plot is currently alphabetical, which may not be the best way - indeed often is not the best way. A more reasonable ordering may be overall volume. As we have a topic_n variable, we can reorder the topic by topic_n, using `mutate` and `reorder`:
 
-```{r}
+```{r, eval = FALSE}
 grouped_sent_chart <- df %>%
   mutate(topic = reorder(topic, topic_n)) %>%
   disp_ms_sent_grouped(sentiment, topic, plot_type = "percent") %>%
@@ -155,7 +162,7 @@ Notice that we removed many of the grid lines, this has not been included as def
 
 Sometimes we may need to create raw volume rather than proportion/%-based charts, we can use the plot_type = "volume" argument to achieve this.
 
-```{r}
+```{r, eval = FALSE}
 grouped_sent_chart <- df %>%
   mutate(topic = reorder(topic, topic_n)) %>%
   disp_ms_sent_grouped(sentiment, topic, plot_type = "volume")
@@ -165,34 +172,132 @@ grouped_sent_chart <- df %>%
 
 However, we notie that the data labels are now not feasible - some categories have bars which are too small to fit the labels. In this case we can remove with:
 
-```{r}
+```{r, eval = FALSE}
 grouped_sent_chart %>%
   chart_data_labels(show_val = FALSE) %>%
   print(preview = TRUE)
 ```
 
-## Exporting to PowerPoint
+# Exporting to PowerPoint - Existing Presentation
 
 So you've made your plots and now you need to export them efficiently to PowerPoint, this is where the {officer} package shines.
 
 The options for exporting are:
 
-1. Read a current PowerPoint presentation and insert the chart into a new slide.
+1.  Read a current PowerPoint presentation and insert the chart into a new slide.
 
-2. Create a new PowerPoint presentation, insert a new slide, copy the chart into an existing presentation.
+2.  Create a new PowerPoint presentation, insert a new slide, copy the chart into an existing presentation.
 
-1. is nearly always preferable over 2. as for each plot it cuts down on overall steps to go from R --> PowerPoint, and when dealing with 10s, or 100s of plots, the difference is meaningful. 
+`1.` is nearly always preferable over `2.` as for each plot it cuts down on overall steps to go from R --\> PowerPoint, and when dealing with 10s, or 100s of plots, the difference is meaningful.
 
-However, you need to know the path to your PowerPoint presentation,  PowerPoint this can be non-trivial for users not familiar with navigating file systems and directories, especially when working on an interactive/live document, meaning you may need to opt for 2.
+However, you need to know the path to your PowerPoint presentation, PowerPoint this can be non-trivial for users not familiar with navigating file systems and directories, especially when working on an interactive/live document, meaning you may need to opt for 2.
 
-### One plot at a time
+## One plot at a time
 
 First we need to initialise a PowerPoint presentation. I have a demo presentation stored at a specific file path, we'll use that one for now. We can store the filepath in a variable and re-use that variable.
 
 ```{r}
 presentation_path <- "~/Documents/presentations/officer_demo.pptx"
+
+presentation <- read_pptx(presentation_path)
+```
+
+::: tip
+**Tip**: for Mac users, use Finder to identify the root to your presentation - right click PowerPoint's tray icon -\> options -\> open in Finder
+:::
+
+Before we begin, the pptx_summary function outputs:
+
+```{r, eval = FALSE}
+pptx_summary(presentation)
+```
+
+```{r, echo = FALSE, message = FALSE}
+library(knitr)
+library(kableExtra)
+# First table
+table1 <- data.frame(
+  "text id" = c(2, 3),
+  "content_type" = c("paragraph", "paragraph"),
+  "slide_id" = c(1, 1)
+)
+
+table1 %>%
+  kable("markdown", align = "c") %>%
+  kable_styling()
 ```
 
 <div class="tip">
-**Tip**: for Mac users, use Finder to identify the root to your presentation after right-clicking 'open in Finder'
+**Tip**: Reading in a PowerPoint presentation with custom 'Master Slides' will give your more slide templates to work with.
 </div>
+
+
+There is a utility function which ships with DisplayR `disp_add_slide` which takes a presentation and a chart as its main inputs, as well as a layout type and master.
+
+
+In our presentation the available layouts are: 
+```{r, echo = FALSE, message = FALSE}
+table2 <- data.frame(
+  "layout" = c("Title Slide", "Title and Vertical Text", "Vertical Title and Text", "Title and Content", "Section Header", "Two Content", "Comparison", "Title Only", "Blank", "Content with Caption", "Picture with Caption"),
+  "master" = rep("Office Theme", 11)
+)
+
+table2 %>%
+  kable("markdown", align = "c")
+```
+
+To add the slide with a 'Two Content' layout, we can use the disp_add_slide function. This is a common layout wherein the chart sits on the right and the copy on the left. We then print our presentation to our presentation path to save the changes.
+
+```{r, eval = FALSE}
+presentation <- disp_add_slide(presentation, grouped_sent_chart, layout = "Two Content")
+
+print(presentation, target = presentation_path)
+```
+
+## Multiple plots
+
+Let's say we had a list of plots, we'll go with volume over time for now. We could generate a list of plots, one for each topic using the following code:
+
+```{r, eval = FALSE}
+topic_names <- unique(sort(df$topic))
+plot_list <- df %>%
+  group_split(topic) %>%
+  map(~ .x %>% disp_ms_vot(date = date, time = "week") %>%
+        chart_theme(legend_position = "n")) %>%
+  setNames(topic_names) %>% # set the name of the list just in case
+  map2(.x = ., .y = topic_names, ~ .x %>%
+         chart_labels(title = paste0("Volume over time - ", .y))) # add a title to each plot
+
+presentation <- purrr::reduce(plot_list, disp_add_slide, layout = "Two Content", .init = presentation)
+
+print(presentation, presentation_path)
+```
+
+We added some additional logic to add a title to each plot so that we can keep track of it inside PowerPoint. Now we can go to the file's destination and open it, we should see our new slides.
+
+<div class="warning">
+**Warning**: A good understanding of iteration using the {purrr} package is important if veering away from the script.
+</div>
+
+# Exporting to PowerPoint - New Presentation
+
+In cases where you're working on live presentations or big presentations, you may need to render your slides to a new presentation and then copy them over. The data will copy over with the chart.
+
+
+To do this, leave the 'path =' argument blank in the `read_pptx` function
+```{r, eval = FALSE}
+presentation <- read_pptx()
+
+grouped_sent_chart <- df %>%
+  mutate(topic = reorder(topic, topic_n)) %>%
+  disp_ms_sent_grouped(sentiment, topic, plot_type = "percent")
+
+
+presentation <- disp_add_slide(presentation, grouped_sent_chart, layout = "Two Content")
+
+print(presentation, target = "~/Documents/tmp_ppt_pres.pptx")
+```
+
+You can now open the presentation again and copy charts across.
+
+That's it for now, see the {officer} and {mschart} packages for further tips on styling and exporting plots.
