--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,11 @@ knitr::opts_chunk$set(
 [![pkgdown](https://github.com/jpcompartir/DisplayR/actions/workflows/pkgdown.yaml/badge.svg)](https://github.com/jpcompartir/DisplayR/actions/workflows/pkgdown.yaml)
 <!-- badges: end -->
 
-The goal of DisplayR is to ...
+<img src="man/figures/Capture_Intelligence_FullColour.png" align="center" width="100%" style="padding: 25px 50px 25px 0px;"/>
+
+DisplayR is Capture Intelligence's comprehensive package for data visualization, offering a wide array of functions tailored to meet various data visualization needs. This versatile package aims to improve data presentation and communication by providing visually engaging and informative graphics.
+
+The package caters to a diverse set of visualization requirements, including static and interactive data visualization, tables, and seamless PowerPoint integration with R. DisplayR streamlines the process of creating and customizing charts and plots, enabling users to efficiently produce visuals that effectively convey the insights and patterns hidden within their data.
 
 ## Installation
 
@@ -31,13 +35,4 @@ You can install the development version of DisplayR from [GitHub](https://github
 devtools::install_github("jpcompartir/DisplayR")
 ```
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(DisplayR)
-## basic example code
-```
-
-placeholder
