update dependencies add to globals add tests to ppt_charts edit ppt vignette

--- a/vignettes/powerpoint.Rmd
+++ b/vignettes/powerpoint.Rmd
@@ -6,7 +6,7 @@ output:
     toc_float: true
     toc_depth: 2
     highlight: tango
-    css: "../inst/css/markdown_styles.css"
+    css: "../inst/css/styles.css"
   
 vignette: >
   %\VignetteIndexEntry{Charts for Excel & Powerpoint}
