Remove tidyverse dependency and call dplyr, tidyr etc. separately in vignettes (this was lazy anyway) Reorder gt by volume

--- a/vignettes/powerpoint.Rmd
+++ b/vignettes/powerpoint.Rmd
@@ -23,7 +23,8 @@ knitr::opts_chunk$set(
 
 ```{r setup, echo = FALSE, results='hide', message = FALSE}
 library(DisplayR)
-library(tidyverse)
+library(dplyr)
+library(purrr)
 library(officer)
 library(mschart)
 ```
