--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/jpcompartir/DisplayR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/jpcompartir/DisplayR/actions/workflows/R-CMD-check.yaml)
 [![pkgdown](https://github.com/jpcompartir/DisplayR/actions/workflows/pkgdown.yaml/badge.svg)](https://github.com/jpcompartir/DisplayR/actions/workflows/pkgdown.yaml)
+
+[![codecov](https://codecov.io/gh/jpcompartir/DisplayR/branch/main/graph/badge.svg?token=J3Z0FP0F53)](https://codecov.io/gh/jpcompartir/DisplayR)
 <!-- badges: end -->
 
 <img src="man/figures/Capture_Intelligence_FullColour.png" align="center" width="100%" style="padding: 25px 50px 25px 0px;"/>
