Add examples to plots_sentiment.R Move to plot_type from type = create dr_plot_sent_vot function to allow for sentiment by bars easily update vignette for plotting_theme_functions

--- a/vignettes/plotting_theme_functions.Rmd
+++ b/vignettes/plotting_theme_functions.Rmd
@@ -152,11 +152,11 @@ df %>%
 
 More often than not, we won't want to create just one sentiment chart, so we've created a function for plotting grouped sentiment charts.
 
-The `dr_plot_sent_group` function comes with the additional argument, `group_var = `. When setting `type = "percent"` and `bar_labels = "volume"`, we can add the y-axis (now x visually) ticks back and give a title to make the plot more explicit, 
+The `dr_plot_sent_group` function comes with the additional argument, `group_var = `. When setting `plot_type = "percent"` and `bar_labels = "volume"`, we can add the y-axis (now x visually) ticks back and give a title to make the plot more explicit, 
 
 ```{r}
 df %>%
-  dr_plot_sent_group(group_var = topic, type = "percent", bar_labels = "volume") +
+  dr_plot_sent_group(group_var = topic, plot_type = "percent", bar_labels = "volume") +
   scale_y_continuous() + # Add the percentage back to the axis ticks
   labs(y = "Percentage of posts")  #Add the label back
 ```
@@ -164,7 +164,7 @@ df %>%
 There are other options, we can set the bar's labels to percent, and titles or change the axis labels, move the legend etc.
 ```{r}
 df %>%
-  dr_plot_sent_group(group_var = topic, type = "percent", bar_labels = "percent") +
+  dr_plot_sent_group(group_var = topic, plot_type = "percent", bar_labels = "percent") +
   labs(x = "Percentage of posts", #We use x = because the plot has had its axes reversed
        title = "Risks & Challenges drive negative sentiment",
        subtitle = "Plot ordered by overall volume", #Just an example
@@ -175,13 +175,13 @@ df %>%
 We can also plot the volumes rather than percentages on the bars themselves:
 ```{r}
 df %>%
-  dr_plot_sent_group(group_var = topic, sentiment_var = sentiment, type = "volume", bar_labels = "percent")
+  dr_plot_sent_group(group_var = topic, sentiment_var = sentiment, plot_type = "volume", bar_labels = "percent")
 ```
 
 However, as we can see, this can lead to unwanted results, especially when using bar_labels. So we could remove the labels and add the gridlines back.
 ```{r}
 df %>%
-  dr_plot_sent_group(group_var = topic, sentiment_var = sentiment, type = "volume", bar_labels = "none") +
+  dr_plot_sent_group(group_var = topic, sentiment_var = sentiment, plot_type = "volume", bar_labels = "none") +
   theme(panel.grid.major.x = element_line()) +
   scale_y_continuous()
 ```
