--- a/README.Rmd
+++ b/README.Rmd
@@ -26,9 +26,9 @@ knitr::opts_chunk$set(
 [![pkgdown](https://github.com/jpcompartir/DisplayR/actions/workflows/pkgdown.yaml/badge.svg)](https://github.com/jpcompartir/DisplayR/actions/workflows/pkgdown.yaml)
 <!-- badges: end -->
 
-DisplayR is SAMY Data Science's comprehensive package for data visualization, offering a wide array of functions tailored to meet various data visualization needs. This versatile package aims to improve data presentation and communication by providing visually engaging and informative graphics.
+DisplayR is SAMY Data Science's comprehensive package for data visualisation, offering a wide array of functions tailored to meet various data visualisation needs. This versatile package aims to improve data presentation and communication by providing visually engaging and informative graphics.
 
-The package caters to a diverse set of visualization requirements, including static and interactive data visualization, tables, and seamless PowerPoint integration with R. DisplayR streamlines the process of creating and customizing charts and plots, enabling users to efficiently produce visuals that effectively convey the insights and patterns hidden within their data.
+The package caters to a diverse set of visualisation requirements, including static and interactive data visualisation, tables, and seamless PowerPoint integration with R. DisplayR streamlines the process of creating and customising charts and plots, enabling users to efficiently produce visuals that effectively convey the insights and patterns hidden within their data.
 
 ## Installation
 
